Improved the breadcrumb to make it work on smaller displays Fixes #108

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,14 @@ ul {
 	list-style: initial;
 }
 
+#breadcrumbs {
+	float: left;
+}
+
+div.crumb.last a{
+	cursor: default;
+}
+
 #controls .button {
 	margin-top: 5px;
 }
